--- a/RPi-Server/views/index.jade
+++ b/RPi-Server/views/index.jade
@@ -4,9 +4,10 @@ block content
   b Status:
   div(style='white-space:pre-line') #{stdout}
   div Failed Attempts: #{failedAttempts} Last failed attempt on #{exactTime} ( #{lastFailedAttempt} )
-  b Choices:
+  b Logout:
   form(action="/logout",method="post")
     button Logout
+  b Choices:
   form(action="/restart.py",method="post")
     button Reset
     input(name="params",placeholder="Parameters")
