Removed unnesecary fShutdown.py
Also removed form entry in index.jade

--- a/RPi-Server/views/index.jade
+++ b/RPi-Server/views/index.jade
@@ -15,10 +15,7 @@ block content
     button Start
     input(name="params",placeholder="Parameters")
   form(action="/shutdown.py",method="post")
-    button Soft Shutdown
-    input(name="params",placeholder="Parameters")
-  form(action="/fShutdown.py",method="post")
-    button Force (Hard) Shutdown
+    button Shutdown
     input(name="params",placeholder="Parameters")
   
   b Change Password:
