--- a/RPi-Server/views/programOutput.jade
+++ b/RPi-Server/views/programOutput.jade
@@ -1,6 +1,7 @@
 html
   head
     title Program Output
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
     b Program Output:
     div(style="white-space:pre-line")= output
