Removed extra code and changed auto-refresh to 30s

--- a/RPi-Server/views/programOutput.jade
+++ b/RPi-Server/views/programOutput.jade
@@ -3,5 +3,7 @@ html
     title Program Output
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    form(action="/" method="get")
+      button Go Back
     b Program Output:
     div(style="white-space:pre-line")= output
