Added back buttonsa to error pages

--- a/RPi-Server/views/programError.jade
+++ b/RPi-Server/views/programError.jade
@@ -1,6 +1,8 @@
 extends layout
 
 block content
+  form(action="/",method="get")
+    button Back
   h1 Oops! Something doesn't add up!
   h2 Error:
   p= error
