--- a/RPi-Server/views/index.jade
+++ b/RPi-Server/views/index.jade
@@ -10,6 +10,10 @@ block content
     b Git Pull Master:
     form(action="/gitpullmaster",method="post")
       button Git Pull Origin Master
+  div(id="serverReboot")
+    b Reboot Server:
+    form(action="/serverReboot",method="post")
+      button Reboot Server
   div(id="status")
     b Computer Power State:
     p #{stdout}
