--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ extends layout
 
 block content
   meta(http-equiv="refresh" content="30")
+  h1 Raspberry Pi Power State Controller: Neil-1-PC
   div(id="logout")
     b Logout:
     form(action="/logout",method="post")
