Added header to index.pug

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,9 @@ extends layout
 
 block content
   meta(http-equiv="refresh" content="30")
-  h1 Raspberry Pi Power State Controller: Neil-1-PC
+  h1
+    |Raspberry Pi Power State Controller:
+    i  Neil-1-PC
   div(id="logout")
     b Logout:
     form(action="/logout",method="post")
