Link href correctly

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,9 +2,9 @@ extends layout
 
 block content
   meta(http-equiv="refresh" content="30")
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700|Happy+Monkey|Ubuntu+Condensed" rel="stylesheet">
+  | <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700|Happy+Monkey|Ubuntu+Condensed" rel="stylesheet">
   h1(id="indexHeader")
-    |Raspberry Pi Power State Controller:
+    | Raspberry Pi Power State Controller:
     i  Neil-1-PC
   div(id="actionBtns")
     span(id="logout")
