Revert "Allow programs to have raw html output"
This reverts commit 87313f350bbf39042e11657220e3c8d1eb195f94.

--- a/views/programOutput.pug
+++ b/views/programOutput.pug
@@ -6,4 +6,4 @@ html
     form(action="/" method="get")
       button Go Back
     b Program Output:
-    div(style="white-space:pre-line")!= output
+    div(style="white-space:pre-line")= output
