Changed small text item in index.pug

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ block content
   meta(http-equiv="refresh" content="30")
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700,700i|Happy+Monkey|Ubuntu+Condensed" rel="stylesheet">
   h1(id="indexHeader")
-    |Raspberry Pi Power State Controller:
+    |RPi Power State Controller:
     i  Neil-1-PC
   div(id="actionBtns")
     span(id="logout")
