--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,9 @@
 body { padding: 10px 10px; background: orange url(../images/background.jpg) no-repeat fixed center center; background-size: cover; }
 input {
-  width: 175px;
+  width: 225px;
   border: 2px dashed #D1C7AC;
   border-left: 4px solid #3366FF;
-  font: 14px 'Ubuntu', sans-serif;
+  font: 16px 'Ubuntu', sans-serif;
 }
 #options input, #hash input { float: right; }
 button:hover { color: white; background: red; box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); }
@@ -16,26 +16,26 @@ button {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font: 14px 'Ubuntu', sans-serif;
+  font: 16px 'Ubuntu', sans-serif;
   -webkit-transition-duration: 0.33s; /* Safari */
-  transition-duration: 0.33s;
+  transition-duration: 0.25s;
 }
-b { font: bold 20px 'Ubuntu', sans-serif; }
+b { font: bold 24px 'Ubuntu', sans-serif; }
 a { color: #00B7FF; }
-p { margin: 0px 0px 0px 0px; font: 14px 'Ubuntu', sans-serif; }
-#indexHeader { margin: 0px 0px 0.5em 0px; font: 40px 'Happy Monkey', cursive; }
-#indexHeader i { font: italic 20px 'Ubuntu', sans-serif; }
+p { margin: 0px 0px 0px 0px; font: 16px 'Ubuntu', sans-serif; }
+#indexHeader { margin: 0px 0px 0.25em 0px; font: 60px 'Happy Monkey', cursive; }
+#indexHeader i { font: italic 24px 'Ubuntu', sans-serif; }
 #logout, #gitPullMaster, #serverReboot, #reload { display: inline-block; padding: 0px 5px 0px 5px; }
+#actionBtns { margin: 0em 0em 1.5em 0em; }
 #status, #failedAttempts {
-  width: 225px;
-  background-color: #FFDA06;
+  width: 300px;
   display: inline-block;
   padding: 0px 5px 0px 5px;
   vertical-align: top;
 }
 #failedAttempts { width: 365px; }
-#info { margin: 1em 0px 1em 0px; }
+#info { margin: 1em 0px 0.5em 0px; }
 #status p { display: inline-block; padding: 0px 4px 0px 0px; }
-#status i { display: inline-block; font: italic 14px 'Ubuntu', sans-serif; }
-#options { width: 275px; }
-#hash { margin: 5px 0px 0px 0px; width: 275px; }
+#status i { display: inline-block; font: italic 18px 'Ubuntu', sans-serif; }
+#options { width: 350px; }
+#hash { margin: 5px 0px 0px 0px; width: 350px; }
