--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ extends layout
 
 block content
   meta(http-equiv="refresh" content="30")
+  link(rel='stylesheet', href='/stylesheets/index.css')
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700,700i|Happy+Monkey|Ubuntu+Condensed" rel="stylesheet">
   div(id="content-wrapper")
     h1(id="indexHeader")
