--- a/views/programError.pug
+++ b/views/programError.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+  link(rel='stylesheet', href='/stylesheets/index.css')
   form(action="/",method="get")
     button Back
   h1 Oops! Something doesn't add up!
