--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,6 @@ doctype html
 html
   head
     title CMS
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    //link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
