--- a/views/programOutput.pug
+++ b/views/programOutput.pug
@@ -1,21 +1,22 @@
 html
   head
     title Program Output
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/programOutput.css')
   body
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    script.
-      function copyToClipboard(element) {
-        var $temp = $("<input>");
-        $("body").append($temp);
-        $temp.val($(element).text()).select();
-        document.execCommand("copy");
-        $temp.remove();
-        alert("Text Copied");
-      }
-    form(action="/" method="get")
-      button Go Back
-    b Program Output:
-    br
-    button(id="copyButton" onclick="copyToClipboard('#copyTarget')") Copy Output to Clipboard
-    div(id="copyTarget" style="white-space:pre-line")= output
+    div(id="content-wrapper")
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+      script.
+        function copyToClipboard(element) {
+          var $temp = $("<input>");
+          $("body").append($temp);
+          $temp.val($(element).text()).select();
+          document.execCommand("copy");
+          $temp.remove();
+          alert("Text Copied");
+        }
+      form(action="/" method="get")
+        button Go Back
+      button(id="copyButton" onclick="copyToClipboard('#copyTarget')") Copy Output to Clipboard
+      br
+      b Program Output:
+      div(id="copyTarget" style="white-space:pre-line")= output
