Change all HTML tags to pug format

--- a/views/programError.pug
+++ b/views/programError.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   link(rel='stylesheet', href='/stylesheets/programError.css')
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700,700i|Happy+Monkey|Ubuntu+Condensed" rel="stylesheet">
+  link(href="https://fonts.googleapis.com/css?family=Ubuntu:400,700,700i|Happy+Monkey|Ubuntu+Condensed", rel="stylesheet")
   div(id="content-wrapper")
     form(action="/",method="get")
       button Back
