--- a/views/programOutput.pug
+++ b/views/programOutput.pug
@@ -4,7 +4,7 @@ html
     link(rel='stylesheet', href='/stylesheets/programOutput.css')
   body
     div(id="content-wrapper")
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+      script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
       script.
         function copyToClipboard(element) {
           var $temp = $("<input>");
