Replace BG and content-wrapper to match

--- a/public/stylesheets/error.css
+++ b/public/stylesheets/error.css
@@ -18,4 +18,4 @@ p { margin: 0px 0px 0px 0px; font: 14px 'Ubuntu', sans-serif; display: inline-bl
 pre { margin: 5px 0px 0px 0px; font: 14px 'Ubuntu', sans-serif; }
 h1 { margin: 10px 0px 10px 0px; font: bold 40px 'Ubuntu', sans-serif; text-align: center; }
 h2 { margin: 10px 0px 0px 0px; font: 26px 'Ubuntu', sans-serif; display: inline-block; padding: 0px 5px 0px 0px; }
-#content-wrapper { width: 1000px; margin: auto; padding: 1em 5px; background: #fed119; border-radius: 25px; }
+#content-wrapper { width: 1000px; margin: auto; padding: 1em 5px; background: #37cac5; border-radius: 25px; }
