--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -26,7 +26,7 @@ form {
   margin: auto;
   width: 310px;
 }
-#content-wrapper { width: 600px; margin: auto; margin-top: 1em; padding: 10px 0px; background: #fed119; border-radius: 25px; }
+#content-wrapper { width: 600px; margin: auto; margin-top: 1em; padding: 10px 0px; background: #37cac5; border-radius: 25px; }
 #message {
   text-align: center;
   margin: auto;
