Change computer name

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ block content
   div(id="content-wrapper")
     h1(id="indexHeader")
       |RPi Power State Controller:
-      i  Neil-1-PC
+      i  Big-Brother
     div(id="actionBtns")
       span(id="logout")
         form(action="/logout",method="post")
