--- a/views/login.pug
+++ b/views/login.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   link(rel='stylesheet', href='/stylesheets/login.css')
-  script(src="jquery-1.12.4.min.js")
+  script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
   
   <script>
     $("#btn").click(function() {
