Fix the password hide/show button on login

--- a/views/login.pug
+++ b/views/login.pug
@@ -2,24 +2,25 @@ extends layout
 
 block content
   link(rel='stylesheet', href='/stylesheets/login.css')
-  
-  script.
-    $("#btn").click(function() {
-      var input = $('#password');
-      var btn = $('#visibility');
-      if (input.attr("type") == "password") {
-        input.attr("type", "text");
-        btn.html("Hide");
-      } else {
-        input.attr("type", "password");
-        btn.html("Show");
-      }
+  script(type='text/javascript').
+    $(document).ready(function() {
+      function changeType() {
+        var input = $('#password');
+        var btn = $('#visibility');
+        if (input.attr('type') == 'password') {
+          input.attr('type', 'text');
+          btn.html('Hide');
+        } else {
+          input.attr('type', 'password');
+          btn.html('Show');
+        }
+      };
+      $('#visibility').click(changeType);
     });
-  
-  div(id="content-wrapper")
-    form(action="/login", method="post")
-      input(id="password", type="password", placeholder="Baby Name Suggestion")
-      button(id="visibility") Show
-      button Submit
-    div(id="message")
+  div(id='content-wrapper')
+    form(action='/login', method='post')
+      input(id='password', name='password', type='password', placeholder='Baby Name Suggestion')
+      button(id='submit') Submit
+    button(id='visibility') Show
+    div(id='message')
       b Thank You for your suggestion!!! See you all on October 27th!
